BUG-65409: Adding fault detection and automated recovery

--- a/core/src/main/resources/messages/messages.properties
+++ b/core/src/main/resources/messages/messages.properties
@@ -89,6 +89,7 @@ ambari.cluster.ambari.server.restarted=Ambari server restarted
 ambari.cluster.ambari.agent.restarted=Ambari agents restarted
 ambari.cluster.removing.node.from.hostgroup=Removing {0} node(s) from the host group {1}
 ambari.cluster.adding.node.to.hostgroup=Adding {0} new host(s) to the host group {1}
+ambari.cluster.node.down=Cluster {0} has nodes down.
 
 stack.instance.terminate=Terminating instance {0}
 stack.instance.delete=Deleting node {0}. Decreasing the node count on instance group {1}"
