initial yarn native services orchestrator implementation

--- a/web/app/static/messages.properties
+++ b/web/app/static/messages.properties
@@ -5,6 +5,7 @@
     "gcp_label": "GCP",
     "openstack_label": "OpenStack",
     "mesos_label": "Mesos",
+    "yarn_label": "YARN",
     "email_invalid": "invalid email address",
     "pwd_invalid": "password lenght is invalid (min 6, max 20 characters)",
     "pwd_repeat": "passwords do not match!",
@@ -72,12 +73,16 @@
     "aws_credential_success": "AWS credential '{0}' created successfully",
     "mesos_credential_failed": "Failed to import Mesos/Marathon stack.",
     "mesos_credential_success": "Marathon credential '{0}' created successfully.",
+    "yarn_credential_failed": "Failed to import YARN stack.",
+    "yarn_credential_success": "YARN credential '{0}' created successfully.",
     "credential_delete_success": "Credential '{0}' deleted successfully.",
     "credential_delete_failed": "There are clusters using this credential, it cannot be deleted.",
     "azure_template_failed": "Azure template create failed ",
     "azure_template_success": "Azure template '{0}' was created successfully",
     "mesos_template_failed": "Mesos constraint create failed ",
     "mesos_template_success": "Mesos constraint '{0}' created successfully",
+    "yarn_template_failed": "YARN constraint create failed ",
+    "yarn_template_success": "YARN constraint '{0}' created successfully",
     "gcp_template_failed": "GCP template create failed ",
     "gcp_template_success": "GCP template '{0}' was created successfully",
     "aws_template_failed": "AWS template creation failed ",
@@ -321,6 +326,8 @@
     "topology_manage_title": "manage platforms",
     "credential_mesos_form_marathon_endpoint": "Marathon Endpoint",
     "credential_marathon_endpoint_invalid": "Marathon endpoint is invalid. It should be in the form ip:port",
+    "credential_yarn_form_yarn_endpoint": "YARN Endpoint",
+    "credential_yarn_endpoint_invalid": "YARN endpoint is invalid. It should be in the form ip:port",
     "topology_list_delete": "delete",
     "topology_delete_success": "Platform '{0}' deleted successfully",
     "topology_delete_failed": "Failed to delete platform",
