Updated install-hdf-mpack.sh to use newest HDF 3.0 mpack build Updated messages.properties to use ambari 2.5.0.3 and HDF 3.0

--- a/web/app/static/messages.properties
+++ b/web/app/static/messages.properties
@@ -506,19 +506,19 @@
     "cluster_form_ambari_version_label": "Ambari Version",
     "cluster_form_ambari_repo_baseurl_label": "Ambari Repo Url",
     "cluster_form_ambari_repo_gpgkeyurl_label": "Ambari Repo Gpg Key Url",
-    "cluster_form_ambari_version_placeholder": "2.4.2.0",
-    "cluster_form_ambari_repo_baseurl_placeholder": "http://public-repo-1.hortonworks.com/ambari/centos7/2.x/updates/2.4.2.0",
+    "cluster_form_ambari_version_placeholder": "2.5.0.3",
+    "cluster_form_ambari_repo_baseurl_placeholder": "http://public-repo-1.hortonworks.com/ambari/centos7/2.x/updates/2.5.0.3",
     "cluster_form_ambari_repo_gpgkeyurl_placeholder": "http://public-repo-1.hortonworks.com/ambari/centos7/RPM-GPG-KEY/RPM-GPG-KEY-Jenkins",
     "cluster_form_hdp_repo_stack_label": "Stack",
     "cluster_form_hdp_repo_stack_placeholder": "HDF",
     "cluster_form_hdp_repo_version_label": "Version",
-    "cluster_form_hdp_repo_version_placeholder": "2.1",
+    "cluster_form_hdp_repo_version_placeholder": "3.0",
     "cluster_form_hdp_repo_os_label": "Os",
     "cluster_form_hdp_repo_os_placeholder": "redhat7",
     "cluster_form_hdp_repo_stack_repoid_label": "Stack Repo Id",
-    "cluster_form_hdp_repo_stack_repoid_placeholder": "HDF-2.1",
+    "cluster_form_hdp_repo_stack_repoid_placeholder": "HDF-3.0",
     "cluster_form_hdp_repo_baseurl_label": "Base Url",
-    "cluster_form_hdp_repo_baseurl_placeholder": "http://public-repo-1.hortonworks.com/HDF/centos7/2.x/updates/2.1.2.0",
+    "cluster_form_hdp_repo_baseurl_placeholder": "http://private-repo-1.hortonworks.com/HDF/centos7/2.x/updates/3.0.0.0-346",
     "cluster_form_hdp_repo_utils_repoid_label": "Utils Repo Id",
     "cluster_form_hdp_repo_utils_repoid_placeholder": "HDP-UTILS-1.1.0.21",
     "cluster_form_hdp_repo_utils_baseurl_label": "Utils Base Url",
