--- a/web/app/static/messages.properties
+++ b/web/app/static/messages.properties
@@ -518,7 +518,7 @@
     "cluster_form_hdp_repo_stack_repoid_label": "Stack Repo Id",
     "cluster_form_hdp_repo_stack_repoid_placeholder": "HDF-3.0",
     "cluster_form_hdp_repo_baseurl_label": "Base Url",
-    "cluster_form_hdp_repo_baseurl_placeholder": "http://private-repo-1.hortonworks.com/HDF/centos7/2.x/updates/3.0.0.0-346",
+    "cluster_form_hdp_repo_baseurl_placeholder": "http://s3.amazonaws.com/dev.hortonworks.com/HDF/centos7/3.x/BUILDS/3.0.0.0-345",
     "cluster_form_hdp_repo_utils_repoid_label": "Utils Repo Id",
     "cluster_form_hdp_repo_utils_repoid_placeholder": "HDP-UTILS-1.1.0.21",
     "cluster_form_hdp_repo_utils_baseurl_label": "Utils Base Url",
